--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -17,48 +17,6 @@
   padding-top: 50px;
 }
 
-.homepage-feature-title{
-  font-weight: bold;
-  vertical-align: middle;
-  margin: 0;
-  vertical-align: middle;
-  font-size: 24px
-}
-
-.homepage-feature{
-  margin-bottom: 20px;
-}
-
-.homepage-feature-body{
-  font-size: 16px;
-}
-
-.homepage-feature-list{
-  font-size: 18px;
-
-  li{
-    margin-bottom: 15px;
-  }
-}
-
-.homepage-property-box{
-  padding-top: 10px;
-    color: #39b54a;
-
-}
-
-.homepage-property-box a{  
-    color: #39b54a;
-}
-
-h4.homepage-property-box-subtitle, h4.homepage-property-box-subtitle a {
-  margin-bottom: 0px;
-}
-
-.homepage-block-content{
-  padding:50px 0;
-}
-
 .modal-backdrop.in{
   opacity: 0.8;
 }
@@ -71,4 +29,11 @@ h4.homepage-property-box-subtitle, h4.homepage-property-box-subtitle a {
   background-image: url("img/patterns/brickwall.png");
   background-repeat: repeat;
   background-position: center center;
+}
+
+.homepage-gradient {
+    background-image: -moz-linear-gradient(top, #fefefe, #e3e7ea);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.00, #fefefe), color-stop(1.0, #e3e7ea));
+    background-color: #e3e7ea;
+    height: 507px;
 }
