--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -1,9 +1,11 @@
-<div class="container">
-    <div class="jumbotron">
-       <h1>Easy &amp; Transparent Rental Properties For Everyone</h1>
-       <p style="margin-top: 30px;">
-          <a href="#/register" class="btn btn-primary btn-lg" role="button">Add a Property</a>
-          <a href="#/register" class="btn btn-primary btn-lg" role="button">Create Tenant Profile</a>
-       </p>
+<div class="homepage-gradient">
+    <div class="container">
+        <div class="jumbotron" style="background-color: transparent">
+           <h1>Easy &amp; Transparent Rental Properties For Everyone</h1>
+           <p style="margin-top: 30px;">
+              <a href="#/register" class="btn btn-primary btn-lg" role="button">Add a Property</a>
+              <a href="#/register" class="btn btn-primary btn-lg" role="button">Create Tenant Profile</a>
+           </p>
+        </div>
     </div>
 </div>
