--- a/angular/src/app/partials/footer.tpl.html
+++ b/angular/src/app/partials/footer.tpl.html
@@ -2,12 +2,45 @@
     <div id="footer-inner">
         <div class="footer-bottom">
             <div class="container">
+
+                <div class="row">
+
+                    <div class="col-md-4">
+                        <h4 class="footer-section-title">About</h4>
+                        <p>Rented enables Tenants, Property Managers, and Owners to enjoy their residential rental experience.</p>
+              
+                    </div> <!-- about -->
+
+                    <div class="col-md-4">
+                    </div>
+
+                    <div class="col-md-2">
+                        <h4 class="footer-section-title">Help</h4>
+                        <ul class="list-unstyled">
+                          <li><a href="mailto:help@rented.co">help@rented.co</a></li>
+                        </ul>
+                    </div> <!-- help -->
+
+                    <div class="col-md-2">
+                        <h4 class="footer-section-title">Legal</h4>
+                       
+                        <ul class="list-unstyled">
+                            <li><a href="#/privacy-policy">Privacy Policy</a></li>
+                            <li><a href="#/terms">Terms of Use</a></li>
+                        </ul>
+                    </div> <!-- legal -->
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                       &reg; 2014 Rented,Inc.
+                    </div>
+                </div>
+
             	<div style="position:absolute;left:-9999px">
             		<a href="http://startups.livechatinc.com" target="_blank"> <img src="http://cdn.livechatinc.com/startups/livechat-for-startups@2x.png" width="96" height="72" alt="LiveChat for Startups"></a>
             	</div>
-                <div class="pull-left">
-                    &copy; 2014 Rented Inc., All rights reserved | <a href="#/terms">Terms of Use</a> | <a href="#/privacy-policy">Privacy Policy</a>
-                </div>
+
             </div><!-- /.container -->
         </div><!-- /.footer-bottom -->
     </div><!-- /#footer-inner -->
