--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -37,3 +37,18 @@
     background-color: #e3e7ea;
     height: 507px;
 }
+
+.footer-section-title {
+    color: black;
+    font-weight: bold;
+    font-size: 16px; 
+}
+
+#footer .footer-bottom {
+    font-size: 14px;
+    color: #656565;
+}
+
+#footer .footer-bottom a {
+    color: #656565;
+}
