--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -1,6 +1,6 @@
 <div class="homepage-gradient">
     <div class="container">
-        <div class="jumbotron" style="background-color: transparent">
+        <div class="jumbotron" style="background-color: transparent; padding-left: 0px;">
            <h1>Easy &amp; Transparent Rental Properties For Everyone</h1>
            <p style="margin-top: 30px;">
               <a href="#/register" class="btn btn-primary btn-lg" role="button">Add a Property</a>
