--- a/angular/src/app/nav/partials/header.tpl.html
+++ b/angular/src/app/nav/partials/header.tpl.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="/" class="header-identity-target nav-brand" style="min-width: 170px; display: inline-block;">
-                <span class="header-title">rented</span>
+                <img src="assets/img/logo.png" alt="logo">
             </a>
             <!-- /.header-identity-target-->
         </div>
