--- a/angular/src/app/partials/footer.tpl.html
+++ b/angular/src/app/partials/footer.tpl.html
@@ -1,40 +1,22 @@
 <div id="footer">
     <div id="footer-inner">
         <div class="footer-bottom">
-            <div class="container">
+            <div class="container" style="padding-top: 30px; padding-bottom: 21px;">
 
-                <div class="row">
+                <div class="row" style="padding-left: 15px;">
 
-                    <div class="col-md-4">
-                        <h4 class="footer-section-title">About</h4>
-                        <p>Rented enables Tenants, Property Managers, and Owners to enjoy their residential rental experience.</p>
-              
-                    </div> <!-- about -->
-
-                    <div class="col-md-4">
-                    </div>
-
-                    <div class="col-md-2">
+                    <div class="col-lg-2" style="padding-right: 0px;">
                         <h4 class="footer-section-title">Help</h4>
-                        <ul class="list-unstyled">
-                          <li><a href="mailto:help@rented.co">help@rented.co</a></li>
-                        </ul>
+                        <a href="mailto:help@rented.co">help@rented.co</a>
                     </div> <!-- help -->
 
-                    <div class="col-md-2">
+                    <div class="col-lg-6">
                         <h4 class="footer-section-title">Legal</h4>
-                       
-                        <ul class="list-unstyled">
-                            <li><a href="#/privacy-policy">Privacy Policy</a></li>
-                            <li><a href="#/terms">Terms of Use</a></li>
-                        </ul>
+                        <a href="#/privacy-policy">Privacy Policy</a>
+                        <a href="#/terms" style="padding-left: 15px;">Terms of Use</a>
+                        <span class="copy" style="padding-left: 15px;">(c) 2014 Rented,Inc.</span>
                     </div> <!-- legal -->
-                </div>
 
-                <div class="row">
-                    <div class="col-md-12">
-                       &reg; 2014 Rented,Inc.
-                    </div>
                 </div>
 
             	<div style="position:absolute;left:-9999px">
