--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -1,11 +1,18 @@
 <div class="homepage-gradient">
-    <div class="container">
-        <div class="jumbotron" style="background-color: transparent; padding-left: 0px;">
-           <h1>Easy &amp; Transparent Rental Properties For Everyone</h1>
-           <p style="margin-top: 30px;">
-              <a href="#/register" class="btn btn-primary btn-lg" role="button">Add a Property</a>
-              <a href="#/register" class="btn btn-primary btn-lg" role="button">Create Tenant Profile</a>
-           </p>
+    <div class="container homepage-drawing">
+        <div class="jumbotron" style="background-color: transparent; padding-left: 16px;">
+           <h1>Welcome Home!</h1>
+           <h2>Easy and transparent property rentals</h2>
+           <div class="row" style="margin-top: 30px;">
+              <div class="col-lg-4 col-sm-5">
+                  <h3>Tenants</h3>
+                  <a href="#/register" class="btn btn-default btn-lg" role="button">Create Your Profile</a>
+              </div>   
+              <div class="col-lg-3 col-sm-3">
+                  <h3>Owners/Managers</h3>
+                  <a href="#/register" class="btn btn-default btn-lg" role="button">Add Your Property</a>
+              </div>   
+           </div>
         </div>
     </div>
 </div>
