--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -8,6 +8,7 @@
 @import "header.less";
 @import "home.less";
 @import "footer.less";
+@import "buttons.less";
 
 @media (min-width: 1200px) {
     body .container {
