--- a/angular/src/app/partials/footer.tpl.html
+++ b/angular/src/app/partials/footer.tpl.html
@@ -5,16 +5,19 @@
 
                 <div class="row" style="padding-left: 15px;">
 
-                    <div class="col-lg-2" style="padding-right: 0px;">
+                    <div class="col-lg-2 col-sm-2 col-xs-4" style="padding-right: 0px;">
                         <h4 class="footer-section-title">Help</h4>
                         <a href="mailto:help@rented.co">help@rented.co</a>
                     </div> <!-- help -->
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3 col-sm-4 col-xs-8">
                         <h4 class="footer-section-title">Legal</h4>
                         <a href="#/privacy-policy">Privacy Policy</a>
                         <a href="#/terms" style="padding-left: 15px;">Terms of Use</a>
-                        <span class="copy" style="padding-left: 15px;">(c) 2014 Rented,Inc.</span>
+                    </div> <!-- legal -->
+
+                    <div class="col-lg-2 col-sm-3">
+                        <span class="copy" style="display: block; padding-top: 35px;">(c) 2014 Rented,Inc.</span>
                     </div> <!-- legal -->
 
                 </div>
