--- a/angular/src/app/nav/partials/header.tpl.html
+++ b/angular/src/app/nav/partials/header.tpl.html
@@ -2,14 +2,14 @@
     <div class="header-black-hide">
     </div>
     <div class="container">
-        <div class="navbar-header" style="padding-top: 15px; padding-bottom: 15px; background-color: #89d4cd; line-height: 32px;">
+        <div class="navbar-header" style="background-color: #89d4cd;">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" style="background-color: #89d4cd; margin-right: 15px; border: 0px;">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="header-identity-target nav-brand" style="min-width: 170px; display: inline-block;">
+            <a href="/" class="header-identity-target nav-brand" style="min-width: 170px; display: block;padding-top: 15px;padding-bottom: 15px;">
                 <img src="assets/img/logo.png" alt="logo">
             </a>
             <!-- /.header-identity-target-->
