--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -17,7 +17,7 @@
         </li>
         <li class="menuparent" ng-show-auth="'login'"><a ng-class="isActive('/account')" href="#/account">My Account</a>
         </li>
-        <li ng-show-auth="'login'"><a href="#/logout" onclick="return confirm('Are you sure you want to logout?')">Logout</a>
+        <li ng-show-auth="'login'"><a href="#/logout" onclick="return confirm('Are you sure you want to logout?')">Sign Out</a>
         </li>
     </ul>
 </div>
