--- a/angular/src/app/user/partials/loginform.tpl.html
+++ b/angular/src/app/user/partials/loginform.tpl.html
@@ -1,22 +1,29 @@
 <div ng-show="err" class="alert alert-danger">{{err}}</div>
-<form method="post" ng-submit="login()">
-    <div class="box">
 
-        <div class="form-group">
-            <label>Email Address</label>
-            <input type="text" class="form-control" placeholder="Email address" ng-model="data.email" required autofocus>
+<form method="post" class="form-horizontal" ng-submit="login()">
+    <div class="form-group">
+        <label class="col-sm-3 control-label">E-mail</label>
+        <div class="col-sm-8">
+        <input class="form-control input-lg" type="text" ng-model="data.email" required autofocus>
         </div>
-        <!-- /.form-group -->
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" placeholder="Password" ng-model="data.pass" required>
-        </div>
-
     </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <input type="submit" value="Login" ng-hide="createMode" class="btn btn-primary btn-inversed btn-block">
-            <p>By registering in to the system you agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
+
+    <div class="form-group">
+        <label class="col-sm-3 control-label">Password</label>
+        <div class="col-sm-8">
+            <input type="password" class="form-control input-lg" ng-model="data.pass" required>
+            <p class="help-block">* Forget Password</p>
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 55px;">
+        <div class="col-sm-12" style="text-align: center;">
+            <p class="small">By Logging in to the System you Agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
+        </div>
+    </div>
+    <div class="row" style="padding-bottom: 80px;">
+        <div class="col-xs-3 center">
+            <input type="submit" value="Login" ng-hide="createMode" class="btn btn-rented btn-lg">
         </div>
     </div>
 </form>
