--- a/angular/src/less/home.less
+++ b/angular/src/less/home.less
@@ -1,6 +1,9 @@
 .homepage-gradient {
-    background-image: -moz-linear-gradient(top, #ffffff 15%, #e4e7e9);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.15, #ffffff), color-stop(1.0, #e4e7e9));
+    background-image: -o-linear-gradient(bottom, #ffffff 15%, #e4e7e9 100%, #e4e7e9 100%);
+    background-image: -moz-linear-gradient(bottom, #ffffff 15%, #e4e7e9 100%, #e4e7e9 100%);
+    background-image: -webkit-linear-gradient(bottom, #ffffff 15%, #e4e7e9 100%, #e4e7e9 100%);
+    background-image: -ms-linear-gradient(bottom, #ffffff 15%, #e4e7e9 100%, #e4e7e9 100%);
+    background-image: linear-gradient(to bottom, #ffffff 15%, #e4e7e9 100%, #e4e7e9 100%);
     background-color: #e4e7e9;
 }
 
@@ -13,3 +16,28 @@
     background-repeat: no-repeat;
 }
 
+.jumbotron {
+
+  h1 {
+    font-size: 40px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+}
+
+@media (min-width: 480px) {
+  .jumbotron {
+
+      h1 {
+        font-size: 50px;
+      }
+
+      h2 {
+        font-size: 30px;
+      }
+
+  }
+}
