--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -18,4 +18,33 @@
 
 #main-wrapper {
   min-height: 660px;
+  background-color: #f6f6f6;
+}
+
+#main-header {
+  min-height: 60px;
+}
+
+.center {
+     float: none;
+     margin-left: auto;
+     margin-right: auto;
+}
+
+h1.page-title {
+     width: 100%
+     display: block;
+     text-align: center;
+     margin-top: 60px;   
+     margin-bottom: 60px;   
+}
+
+.control-label {
+     font-size: 24px;
+     font-weight: normal;
+}
+
+body .form-horizontal .control-label {
+     text-align: left;
+     padding-right: 0px;
 }
