--- a/angular/src/app/user/partials/loginform.tpl.html
+++ b/angular/src/app/user/partials/loginform.tpl.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row" style="padding-bottom: 80px;">
         <div class="col-xs-3 center">
-            <input type="submit" value="Login" ng-hide="createMode" class="btn btn-rented btn-lg">
+            <input type="submit" value="Login" ng-hide="createMode" class="btn btn-rented">
         </div>
     </div>
 </form>
