--- a/angular/src/less/buttons.less
+++ b/angular/src/less/buttons.less
@@ -1,4 +1,6 @@
 .btn-rented {
+  font-size: 17px;
+  min-height: 42px;
   background-color: hsl(198, 19%, 57%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bababa", endColorstr="#8b8b8b");
@@ -20,6 +22,8 @@
 .btn-rented:active,
 .btn-rented.active,
 .open .dropdown-toggle.btn-rented {
+  font-size: 17px;
+  min-height: 42px;
   background-color: hsl(198, 19%, 57%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#adf4f0", endColorstr="#90bebb");
