--- a/angular/src/less/header.less
+++ b/angular/src/less/header.less
@@ -46,6 +46,14 @@
         }
     }
 
+    @media (min-width: 1800px) {
+
+        .header-black-hide {
+             width: 800px;
+        }
+
+    }
+
     @media (min-width: 768px) {
 
         .header-black-hide {
