--- a/angular/src/less/buttons.less
+++ b/angular/src/less/buttons.less
@@ -3,15 +3,15 @@
   min-height: 42px;
   background-color: hsl(198, 19%, 57%) !important;
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bababa", endColorstr="#8b8b8b");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#bababa), to(#8b8b8b));
-  background-image: -moz-linear-gradient(top, #bababa, #8b8b8b);
-  background-image: -ms-linear-gradient(top, #bababa, #8b8b8b);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #bababa), color-stop(100%, #8b8b8b));
-  background-image: -webkit-linear-gradient(top, #bababa, #8b8b8b);
-  background-image: -o-linear-gradient(top, #bababa, #8b8b8b);
-  background-image: linear-gradient(#bababa, #8b8b8b);
-  border-color: #8b8b8b #8b8b8b hsl(198, 19%, 49%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bababa", endColorstr="#b8b8b8");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#bababa), to(#b8b8b8));
+  background-image: -moz-linear-gradient(top, #bababa, #b8b8b8);
+  background-image: -ms-linear-gradient(top, #bababa, #b8b8b8);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #bababa), color-stop(100%, #b8b8b8));
+  background-image: -webkit-linear-gradient(top, #bababa, #b8b8b8);
+  background-image: -o-linear-gradient(top, #bababa, #b8b8b8);
+  background-image: linear-gradient(#bababa, #b8b8b8);
+  //border-color: #b8b8b8 #b8b8b8 hsl(198, 19%, 49%);
   color: #fff !important;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.52);
   -webkit-font-smoothing: antialiased;
@@ -34,7 +34,7 @@
   background-image: -webkit-linear-gradient(top, #adf4f0, #90bebb);
   background-image: -o-linear-gradient(top, #adf4f0, #90bebb);
   background-image: linear-gradient(#adf4f0, #90bebb);
-  border-color: #90bebb #90bebb hsl(198, 19%, 49%);
+  //border-color: #90bebb #90bebb hsl(198, 19%, 49%);
   color: #fff !important;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.52);
   -webkit-font-smoothing: antialiased;
