--- a/angular/src/less/buttons.less
+++ b/angular/src/less/buttons.less
@@ -1,41 +1,44 @@
-.btn-rented {
-  font-size: 17px;
-  min-height: 42px;
-  background-color: hsl(198, 19%, 57%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bababa", endColorstr="#b8b8b8");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#bababa), to(#b8b8b8));
-  background-image: -moz-linear-gradient(top, #bababa, #b8b8b8);
-  background-image: -ms-linear-gradient(top, #bababa, #b8b8b8);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #bababa), color-stop(100%, #b8b8b8));
-  background-image: -webkit-linear-gradient(top, #bababa, #b8b8b8);
-  background-image: -o-linear-gradient(top, #bababa, #b8b8b8);
-  background-image: linear-gradient(#bababa, #b8b8b8);
-  //border-color: #b8b8b8 #b8b8b8 hsl(198, 19%, 49%);
-  color: #fff !important;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.52);
-  -webkit-font-smoothing: antialiased;
+.btn-rented.active {
+  color: rgba(255, 255, 255, 0.75);
 }
+.btn-rented {
+  color: #ffffff;
+  font-size: 18px;
+  padding: 8px 18px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #aeaeae;
+  background-image: -moz-linear-gradient(top, #b8b8b8, #9f9f9f);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#b8b8b8), to(#9f9f9f));
+  background-image: -webkit-linear-gradient(top, #b8b8b8, #9f9f9f);
+  background-image: -o-linear-gradient(top, #b8b8b8, #9f9f9f);
+  background-image: linear-gradient(to bottom, #b8b8b8, #9f9f9f);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffb8b8b8', endColorstr='#ff9f9f9f', GradientType=0);
+  border-color: #9f9f9f #9f9f9f #787878;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #9f9f9f;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
 
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
 .btn-rented:hover,
 .btn-rented:focus,
 .btn-rented:active,
-.btn-rented.active,
-.open .dropdown-toggle.btn-rented {
-  font-size: 17px;
-  min-height: 42px;
-  background-color: hsl(198, 19%, 57%) !important;
+.btn-rented.active {
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #7acfc7;
+  background-image: -moz-linear-gradient(top, #89d4cd, #64c6bd);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#89d4cd), to(#64c6bd));
+  background-image: -webkit-linear-gradient(top, #89d4cd, #64c6bd);
+  background-image: -o-linear-gradient(top, #89d4cd, #64c6bd);
+  background-image: linear-gradient(to bottom, #89d4cd, #64c6bd);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#adf4f0", endColorstr="#90bebb");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#adf4f0), to(#90bebb));
-  background-image: -moz-linear-gradient(top, #adf4f0, #90bebb);
-  background-image: -ms-linear-gradient(top, #adf4f0, #90bebb);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #adf4f0), color-stop(100%, #90bebb));
-  background-image: -webkit-linear-gradient(top, #adf4f0, #90bebb);
-  background-image: -o-linear-gradient(top, #adf4f0, #90bebb);
-  background-image: linear-gradient(#adf4f0, #90bebb);
-  //border-color: #90bebb #90bebb hsl(198, 19%, 49%);
-  color: #fff !important;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.52);
-  -webkit-font-smoothing: antialiased;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff89d4cd', endColorstr='#ff64c6bd', GradientType=0);
+  border-color: #64c6bd #64c6bd #3ba299;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #64c6bd;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
