--- a/angular/src/app/user/partials/loginform.tpl.html
+++ b/angular/src/app/user/partials/loginform.tpl.html
@@ -21,8 +21,8 @@
             <p class="small">By Logging in to the System you Agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
         </div>
     </div>
-    <div class="row" style="padding-bottom: 80px;">
-        <div class="col-xs-3 center">
+    <div class="row" style="padding-bottom: 50px;">
+        <div class="col-xs-3 center text-center">
             <input type="submit" value="Login" ng-hide="createMode" class="btn btn-rented">
         </div>
     </div>
