--- a/angular/src/app/user/register.tpl.html
+++ b/angular/src/app/user/register.tpl.html
@@ -1,12 +1,8 @@
 <div class="container">
-    <div class="block-content block-content-small-padding">
-        <div class="block-content-inner">
-            <div class="row">
-                <div class="col-sm-4 col-sm-offset-4">
-                    <h2 class="center">{{title}}</h2>
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-lg-10 center">
+            <h1 class="page-title">Register</h1>
             <ng-include src="'user/partials/registerform.tpl.html'"></ng-include>
         </div>
-    </div>
-</div><!-- /.container -->
+    </div> <!-- /.row -->
+</div> <!-- /.container -->
