active navbar link color

--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -4,6 +4,7 @@
 @import "../assets/css/font-roboto.css";
 /* @import "../assets/css/realocation.css"; */
 
+@import "variables.less";
 @import "../app/user/less/login.less";
 @import "header.less";
 @import "home.less";
@@ -48,3 +49,5 @@ body .form-horizontal .control-label {
      text-align: left;
      padding-right: 0px;
 }
+
+
