--- a/angular/src/less/header.less
+++ b/angular/src/less/header.less
@@ -4,6 +4,10 @@
 
 #header-wrapper {
 
+    .navbar-inverse .navbar-nav > li > a.active {
+        color: @brand-primary;
+    }
+
     .header-black-hide {
        display: none;
        position: fixed;
