--- a/angular/src/less/variables.less
+++ b/angular/src/less/variables.less
@@ -294,6 +294,9 @@
 @screen-sm-max:              (@screen-md-min - 1);
 @screen-md-max:              (@screen-lg-min - 1);
 
+// Wide screen
+@screen-wd:                  1800px;
+@screen-wd-min:              @screen-lg;
 
 //== Grid system
 //
