--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse" style="background-color: #000000;">
+<div class="collapse navbar-collapse">
     <ul class="nav navbar-nav primary">
         <li class="menuparent">
             <a ng-class="isActive('/tenants')" href="#/tenants">Tenants</a>
