--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -1,63 +1,79 @@
-<div class="container">
-    <div class="block-content block-content-small-padding">
-        <div class="block-content-inner">
+<div class="white-stripe" style="min-height: 543px; padding-top: 80px;">
+    <div class="container">
+
             <div class="row">
-                <div class="col-sm-12">
-                    <h2>Owners & Managers Benefits</h2>
-
-                    <div class="row">
-                            <div class="col-sm-4 col-md-4 col-lg-4" style="border-right: 1px dotted #999; height: 260px;">
-                                 <img src="http://placehold.it/200x200" class="img-circle center-block">
-                                 <h4 class="text-center">Easy Tenant Screening</h4>
-                            </div>
-                            <div class="col-sm-4 col-md-4 col-lg-4" style="border-right: 1px dotted #999; height: 260px;">
-                                 <img src="http://placehold.it/200x200" class="img-circle center-block">
-                                 <h4 class="text-center">Free for 5 properties</h4>
-                            </div>
-                            <div class="col-sm-4 col-md-4 col-lg-4" style="height: 260px;">
-                                 <img src="http://placehold.it/200x200" class="img-circle center-block">
-                                 <h4 class="text-center">Pricing tools &amp; market rent data</h4>
-                            </div>
-                    </div>
-
-                    <div class="row" style="padding-top: 30px;">
-                        <div class="col-sm-12">
-                            <h4>Easy tenant screening</h4>
-                            <div class="row">
-                                <img src="http://placehold.it/1000x600" class="col-sm-4 col-xs-12">
-                                <div class="col-sm-8 col-xs-12">
-                                   <p class="text-justify" style="font-size: 18px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?<p> 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row" style="padding-top: 30px;">
-                        <div class="col-sm-12">
-                            <h4>Free for 5 properties</h4>
-                            <div class="row">
-                                <img src="http://placehold.it/1000x600" class="col-sm-4 col-xs-12">
-                                <div class="col-sm-8 col-xs-12">
-                                   <p class="text-justify" style="font-size: 18px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?<p> 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row" style="padding-top: 30px;">
-                        <div class="col-sm-12">
-                            <h4>Pricing tools &amp; market rent data</h4>
-                            <div class="row">
-                                <img src="http://placehold.it/1000x600" class="col-sm-4 col-xs-12">
-                                <div class="col-sm-8 col-xs-12">
-                                   <p class="text-justify" style="font-size: 18px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?<p> 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                <div class="col-sm-8 center text-center">
+                    <h1 style="margin-bottom: 36px;">Owners & Managers Benefits</h1>
                 </div>
-            </div><!-- /.row -->
-        </div><!-- /.block-content-inner -->
-    </div><!-- /.block-content -->
-</div><!-- /.container -->
+            </div>
+
+            <div class="row">
+                    <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
+                         <img src="assets/img/features/tenant-screening.gif" class="center-block">
+                         <h4 class="text-center">Easy Tenant Screening</h4>
+                    </div>
+                    <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
+                         <img src="assets/img/features/free-properties.gif" class="center-block">
+                         <h4 class="text-center">Free for 5 properties</h4>
+                    </div>
+                    <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
+                         <img src="assets/img/features/pricing-tools.gif" class="center-block">
+                         <h4 class="text-center">Pricing tools &amp; market rent data</h4>
+                    </div>
+            </div>
+
+    </div>
+</div>
+
+<div class="feature-stripe" style="background-color: #f6f6f6;">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h4>Easy tenant screening</h4>
+                <div class="row">
+                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>Quick snapshot of all your applicants</li>
+                       <li>Side by side comparison of top offers</li>
+                       <li>Detailed views of property analytics</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="feature-stripe" style="background-color: #ededed;">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h4>Free for 5 properties</h4>
+                <div class="row">
+                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>No hidden fees, no charges</li>
+                       <li>Ideal for owners who manage their own properties</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="feature-stripe" style="background-color: #e5e5e5;">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h4>Pricing tools &amp; market rent data</h4>
+                <div class="row">
+                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>See market rent for your property</li>
+                       <li>Negotiate rent one-on-one</li>
+                       <li>Data to help make accurate price decisions</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
