--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -10,6 +10,7 @@
 @import "home.less";
 @import "footer.less";
 @import "buttons.less";
+@import "features.less";
 
 @media (min-width: 1200px) {
     body .container {
@@ -50,4 +51,7 @@ body .form-horizontal .control-label {
      padding-right: 0px;
 }
 
-
+.white-stripe {
+     background-color: #ffffff;
+     width: 100%;
+}
