--- a/angular/src/less/features.less
+++ b/angular/src/less/features.less
@@ -11,7 +11,7 @@
    }
 
    .feature-stripe {
-      height: 330px;
+      min-height: 330px;
       font-weight: 300;
       color: @gray-darker;
 
@@ -23,11 +23,11 @@
       }
 
       img {
-        min-width: 342px;
         min-height: 216px;
       }
 
       ul {
+        margin-bottom: 30px;
 
         font-size: 24px;
  
