--- a/angular/src/app/nav/partials/header.tpl.html
+++ b/angular/src/app/nav/partials/header.tpl.html
@@ -1,15 +1,15 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: #89d4cd; border-width: 0 0 0 0;">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="header-black-hide">
     </div>
     <div class="container">
-        <div class="navbar-header" style="background-color: #89d4cd;">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" style="background-color: #89d4cd; margin-right: 15px; border: 0px;">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="header-identity-target nav-brand" style="min-width: 170px; display: block;padding-top: 15px;padding-bottom: 15px;">
+            <a href="/" class="nav-brand" style="">
                 <img src="assets/img/logo.png" alt="logo">
             </a>
             <!-- /.header-identity-target-->
