--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -11,6 +11,7 @@
 @import "footer.less";
 @import "buttons.less";
 @import "features.less";
+@import "properties.less";
 
 @media (min-width: 1200px) {
     body .container {
@@ -54,4 +55,16 @@ body .form-horizontal .control-label {
 .white-stripe {
      background-color: #ffffff;
      width: 100%;
+}
+
+
+.header-shadow {
+     box-shadow: 0 0 3px #eeeeef;
+}
+
+.content-header {
+    ul {
+      font-size: 24px;
+      font-weight: 300;
+    }
 }
