--- a/angular/src/less/properties.less
+++ b/angular/src/less/properties.less
@@ -1,9 +1,39 @@
-.property-list{
+.property-list {
 
-  .property{
+  padding-top: 20px;
+  padding-bottom: 20px;
 
-    .title-price{
+  .property-row {
 
+    margin-top: 26px;
+    color: #666666; 
+
+    h3 {
+      margin-top: 0px;      
+      font-size: 34px;
+      font-weight: 300;
+
+      a {
+       color: #666666; 
+      }
+
+    }
+
+    h4 {
+      font-size: 34px;
+      font-weight: 300;
+      margin-bottom: 20px;
+
+      a {
+       color: #666666; 
+      }
+
+    }
+
+    h5 {
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 15px;
     }
 
   }
