--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -1,39 +1,47 @@
-<div class="container">
-<div class="block-content block-content-small-padding">
-<div class="block-content-inner">
-<div class="row">
-<div class="col-sm-12">
-    <h2>Recent Properties</h2>
+<div class="content-header header-shadow" style="min-height: 370px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1 class="page-title">Recent Properties</h1>
 
-    <p ng-show-auth="'logout'">Take a tour</p> 
+                <h3 ng-show-auth="'logout'">Take a tour</h3> 
 
-    <ul class="list-unstyled" ng-show-auth="'logout'">
-       <li>- View our recent available properties</li>
-       <li>- <a href="#/login">Login</a> or <a href="#/register">register</a> to start adding properties you want to track</li>
-    </ul>
+                <ul ng-show-auth="'logout'">
+                   <li>View our recent available properties</li>
+                   <li><a href="#/login">Login</a> or <a href="#/register">register</a> to start adding properties you want to track</li>
+                </ul>
 
-    <div class="row" ng-repeat="(id, property) in properties" style="border-bottom: 1px dotted #999; padding-top:30px;">
-            <div class="col-sm-6 col-md-6 col-lg-4">
-                <ng-include src="'property/partials/snippet.tpl.html'"></ng-include>
-            </div><!-- /.property-row-picture -->
-
-            <div class="property-row-content col-sm-6 col-md-6 col-lg-8 col-md-6 col-lg-8">
-                <h3 class="property-row-title">
-                    <a href="#/property/{{id}}">{{property.address}}</a>
-                </h3><!-- /.property-row-title -->
-
-                <h4 class="property-row-subtitle">
-                    <a href="#/property/{{id}}">{{property.city}}, {{property.state}} {{property.zip}}</a>
-                </h4><!-- /.property-row-subtitle -->
-
-                <div class="property-row-price"><span>Starting Offer</span> $ {{property.rent}}</div><!-- /.property-row-price -->
-
-                <p class="property-row-body" ng-bind-html="property.description">
-                </p><!-- /.property-row-body -->
-            </div><!-- /.property-row-content -->
+            </div>
+        </div>
     </div>
-
 </div>
-</div><!-- /.block-content-inner -->
-</div><!-- /.block-content -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 property-list">
+
+            <div class="row property-row" ng-repeat="(id, property) in properties">
+                <img src="http://placehold.it/553x368" class="col-sm-6 col-xs-12" style="min-height: 368px;">
+                <div class="col-sm-6 col-xs-12">
+                    <h3>
+                        <a href="#/property/{{id}}">{{property.address}}</a>
+                    </h3><!-- /.property-row-title -->
+
+                    <h4>
+                        <a href="#/property/{{id}}">{{property.city}}, {{property.state}} {{property.zip}}</a>
+                    </h4><!-- /.property-row-subtitle -->
+
+                    <div class="property-row-price"><strong>Starting Offer</strong> ${{property.rent}}</div>
+
+                    <div class="property-row-features">{{property.beds}} Beds, {{property.baths}} Baths</div>
+
+                    <div class="property-row-offers" ng-include="'property/partials/offers.tpl.html'">
+                    </div>
+
+                    <a href="#/property/{{id}}" class="btn btn-rented">See More</a>
+                </div>
+            </div> <!-- property-row -->
+
+        </div>
+    </div>
 </div><!-- /.container -->
