--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -66,5 +66,8 @@ body .form-horizontal .control-label {
     ul {
       font-size: 24px;
       font-weight: 300;
+      li {
+        padding-top: 20px;
+      }
     }
 }
