--- a/angular/src/app/partials/footer.tpl.html
+++ b/angular/src/app/partials/footer.tpl.html
@@ -5,18 +5,18 @@
 
                 <div class="row" style="padding-left: 15px;">
 
-                    <div class="col-lg-2 col-sm-2 col-xs-4" style="padding-right: 0px;">
+                    <div class="col-lg-2 col-sm-2 col-xs-6 footer-help">
                         <h4 class="footer-section-title">Help</h4>
                         <a href="mailto:help@rented.co">help@rented.co</a>
                     </div> <!-- help -->
 
-                    <div class="col-lg-3 col-sm-4 col-xs-8">
+                    <div class="col-lg-3 col-sm-4 col-xs-6">
                         <h4 class="footer-section-title">Legal</h4>
                         <a href="#/privacy-policy">Privacy Policy</a>
-                        <a href="#/terms" style="padding-left: 15px;">Terms of Use</a>
+                        <a class="footer-terms" href="#/terms" style="white-space: nowrap;">Terms of Use</a>
                     </div> <!-- legal -->
 
-                    <div class="col-lg-2 col-sm-3">
+                    <div class="col-lg-2 col-sm-3 text-center">
                         <span class="copy" style="display: block; padding-top: 35px;">(c) 2014 Rented,Inc.</span>
                     </div> <!-- legal -->
 
