--- a/angular/src/less/footer.less
+++ b/angular/src/less/footer.less
@@ -17,4 +17,13 @@
         color: #656565;
     }
 
+    @media (min-width: @screen-xs-min) {
+        .footer-help {
+            padding-right: 0px;
+        }
+
+        .footer-terms {
+            padding-left: 15px;
+        }
+    }
 }
