--- a/angular/src/app/partials/footer.tpl.html
+++ b/angular/src/app/partials/footer.tpl.html
@@ -1,7 +1,7 @@
 <div id="footer">
     <div id="footer-inner">
         <div class="footer-bottom">
-            <div class="container" style="padding-top: 30px; padding-bottom: 19px;">
+            <div class="container" style="padding-top: 30px; padding-bottom: 26px;">
 
                 <div class="row" style="padding-left: 15px;">
 
@@ -17,7 +17,7 @@
                     </div> <!-- legal -->
 
                     <div class="col-lg-2 col-sm-3 text-center">
-                        <span class="copy" style="display: block; padding-top: 35px;">(c) 2014 Rented,Inc.</span>
+                        <span class="footer-cr">(c) 2014 Rented,Inc.</span>
                     </div> <!-- legal -->
 
                 </div>
