new responsive navbar

--- a/angular/src/less/footer.less
+++ b/angular/src/less/footer.less
@@ -31,7 +31,7 @@
 #footer-wrapper {
    margin-bottom: 30px; // otherwise livechat will cover copyright
 
-   @media (min-width: @screen-xs-min) {
+   @media (min-width: @screen-sm-min) {
      margin-bottom: 0px;
    }
 
@@ -39,7 +39,7 @@
      display: block;
      padding-top: 85px;
 
-     @media (min-width: @screen-xs-min) {
+     @media (min-width: @screen-sm-min) {
         padding-top: 35px;
      }
    }
