--- a/angular/src/app/nav/partials/header.tpl.html
+++ b/angular/src/app/nav/partials/header.tpl.html
@@ -9,9 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="nav-brand" style="">
-                <img src="assets/img/logo.png" alt="logo">
-            </a>
+            <a href="/" class="nav-brand"></a>
             <!-- /.header-identity-target-->
         </div>
         <ng-include src="'nav/partials/nav.tpl.html'"></ng-include>
