--- a/angular/src/less/header.less
+++ b/angular/src/less/header.less
@@ -6,35 +6,52 @@
 
     .navbar-inverse {
 
-        background-color: @brand-primary;
+        background-color: @gray-darker;
         border-width: 0 0 0 0;        
+
+        @media (min-width: @screen-sm-min) {
+           background-color: @brand-primary;
+        }
 
         .navbar-nav > li > a.active {
             color: @brand-primary;
         }
 
         .navbar-header {
-            background-color: @brand-primary;
+            background-color: @gray-darker;
+
+            @media (min-width: @screen-sm-min) {
+               background-color: @brand-primary;
+            }
         }
 
         .navbar-toggle {
-            background-color: @brand-primary;
+            background-color: @gray-darker;
+            color: @gray-darker;
             margin-right: 15px;
             border: 0px;
         }
 
         .nav-brand {
-            min-width: 170px;
             display: block;
-            padding-top: 15px;
-            padding-bottom: 15px;
+            background-image: url('img/logo-responsive.png');
+            background-repeat: no-repeat;
+            width: 170px;
+            height: 34px;
+            margin-top: 15px;
+            margin-bottom: 15px;
+            margin-left: 15px;
+
+            @media (min-width: @screen-sm-min) {
+               background-image: url('img/logo.png');
+               margin-left: 0px;
+            }
         }
 
     }
 
     .navbar-collapse {
         background-color: #000000;
-        margin-bottom: 15px;
     }
 
     .header-black-hide {
@@ -45,14 +62,10 @@
        width: 400px;
        top: 0px;
        right: 0px;
-    }
 
-    @media (min-width: @screen-wd-min) {
-
-        .header-black-hide {
-             width: 800px;
-        }
-
+       @media (min-width: @screen-wd-min) {
+          width: 800px;
+       }
     }
 
     @media (min-width: @screen-md-min) {
