--- a/angular/src/app/partials/footer.tpl.html
+++ b/angular/src/app/partials/footer.tpl.html
@@ -16,8 +16,8 @@
                         <a class="footer-terms" href="#/terms" style="white-space: nowrap;">Terms of Use</a>
                     </div> <!-- legal -->
 
-                    <div class="col-lg-2 col-sm-3 text-center">
-                        <span class="footer-cr">(c) 2014 Rented,Inc.</span>
+                    <div class="col-lg-2 col-sm-3 text-center footer-cr">
+                        <span>(c) 2014 Rented,Inc.</span>
                     </div> <!-- legal -->
 
                 </div>
