better TopBannerChannel, password reset, vendor assets in original dir

--- a/angular/src/app/nav/partials/banner.tpl.html
+++ b/angular/src/app/nav/partials/banner.tpl.html
@@ -1,1 +1,1 @@
-<div align="center" ng-show="banner" class="alert-{{banner.contentClass}}" ng-bind-html="banner.content"></div>
+<div ng-click="banner=null" ng-show="banner" class="alert alert-{{banner.contentClass}} text-center top-banner-channel" ng-bind-html="banner.content"></div>
