fix navbar font size

--- a/angular/src/less/header.less
+++ b/angular/src/less/header.less
@@ -13,6 +13,7 @@
 
         background-color: @gray-darker;
         border-width: 0 0 0 0;        
+        font-size: 14px;
 
         @media (min-width: @screen-sm-min) {
            background-color: @brand-primary;
